--- a/SpanishVocabulary.html
+++ b/SpanishVocabulary.html
@@ -354,7 +354,7 @@ SELECT {
 {english:"discipline", spanish:"disciplina (f)",englishPhrase:"in my opinion, children need discipline", spanishPhrase:"en mi opinión, los niños necesitan disciplina",module:"module 03",type:"words"},
 {english:"through", spanish:"a través de",englishPhrase:"he learns through repetition", spanishPhrase:"aprenda a través de repetición",module:"module 03",type:"words"},
 {english:"measurement", spanish:"medida (f)",englishPhrase:"I need to know the exact measurements", spanishPhrase:"necesito saber las medidas exactas",module:"module 03",type:"words"},
-{english:"to reach, to catch up, to hand", spanish:"alcanzar",englishPhrase:"I can't reach the sugar, can you help me?", spanishPhrase:"no puedo alconzar el azúcar.  me puedes ayudar?",module:"module 03",type:"words"},
+{english:"to reach, to catch up, to hand", spanish:"alcanzar",englishPhrase:"I can't reach the sugar, can you help me?", spanishPhrase:"no puedo alcanzar el azúcar.  me puedes ayudar?",module:"module 03",type:"words"},
 {english:"some, someone", spanish:"alguno(a)",englishPhrase:"can I see some first?", spanishPhrase:"puedo ver algunos primero?",module:"module 03",type:"words"},
 {english:"ancient", spanish:"antiguo(a)",englishPhrase:"we went to see some ancient temples in Belize", spanishPhrase:"fuimos a ver algunos templos antiguos en Belice",module:"module 03",type:"words"},
 {english:"time, weather", spanish:"tiempo (m)",englishPhrase:"how's the weather there?", spanishPhrase:"cómo está el tiempo allí?",module:"module 03",type:"words"},
@@ -428,12 +428,12 @@ SELECT {
 {english:"pleasure", spanish:"placer (m)",englishPhrase:"it was a pleasure", spanishPhrase:"fue un placer",module:"module 05",type:"words"},
 {english:"useful", spanish:"útil",englishPhrase:"it will be very useful", spanishPhrase:"será muy útil",module:"module 05",type:"words"},
 {english:"camera", spanish:"cámara",englishPhrase:"I dropped my camera", spanishPhrase:"se me cayó la cámara",module:"module 05",type:"words"},
-{english:"branch (tree)", spanish:"rama (f)",englishPhrase:"we should cut that branch", spanishPhrase:"deberíamos cortar esta rama",module:"module 05",type:"words"},
+{english:"branch (tree)", spanish:"rama (f)",englishPhrase:"we should cut that branch", spanishPhrase:"deberíamos cortar esa rama",module:"module 05",type:"words"},
 {english:"method", spanish:"método ",englishPhrase:"it's a new method", spanishPhrase:"es un método nuevo",module:"module 05",type:"words"},
 {english:"owner", spanish:"dueño(a)",englishPhrase:"they're the owners of the house", spanishPhrase:"son los dueños de la casa",module:"module 05",type:"words"},
 {english:"analysis", spanish:"análisis (m)",englishPhrase:"I agree with her analysis of the situation", spanishPhrase:"estoy de acuerdo con su análisis de la situación",module:"module 05",type:"words"},
 {english:"church", spanish:"iglesia (f)",englishPhrase:"it's next to the church", spanishPhrase:"está al lado de la iglesia",module:"module 05",type:"words"},
-{english:"battle", spanish:"batalla (f)",englishPhrase:"the war had many terrible battles", spanishPhrase:"la guerra tuvo muchos batallas terribles",module:"module 05",type:"words"},
+{english:"battle", spanish:"batalla (f)",englishPhrase:"the war had many terrible battles", spanishPhrase:"la guerra tuvo muchas batallas terribles",module:"module 05",type:"words"},
 {english:"south", spanish:"sur (m)",englishPhrase:"it's a city in the south of the country", spanishPhrase:"es una ciudad en el sur del país",module:"module 05",type:"words"},
 {english:"husband", spanish:"marido, esposo (m)",englishPhrase:"I'll call my husband later", spanishPhrase:"llamaré a mi marido más tarde",module:"module 05",type:"words"},
 {english:"wife", spanish:"esposa (f)",englishPhrase:"his wife is very beautiful", spanishPhrase:"su esposa es muy bonita (hermosa)",module:"module 05",type:"words"},
@@ -472,6 +472,56 @@ SELECT {
 {english:"free", spanish:"gratuito(a)",englishPhrase:"it's a free service", spanishPhrase:"es un servicio gratuito",module:"module 05",type:"words"},
 {english:"to offer", spanish:"ofrecer",englishPhrase:"what services do they offer for free?", spanishPhrase:"qué servicios ofrecen de forma gratuita?",module:"module 05",type:"words"},
 {english:"to recognize", spanish:"reconocer",englishPhrase:"I don’t recognize him", spanishPhrase:"no los reconozco",module:"module 05",type:"words"},
+{english:"knot", spanish:"nudo (m)",englishPhrase:"I tied the knot again", spanishPhrase:"hice el nudo otra vez",module:"module 06",type:"words"},
+{english:"naked", spanish:"desnudo(a)",englishPhrase:"they like to be naked on the beach", spanishPhrase:"les gusta estar denudos en la playa",module:"module 06",type:"words"},
+{english:"monkey", spanish:"mono (m)",englishPhrase:"there's a monkey in the tree", spanishPhrase:"hay un mono en el árbol",module:"module 06",type:"words"},
+{english:"brake (car)", spanish:"freno (m)",englishPhrase:"the brakes are not good", spanishPhrase:"los frenos no son buenos",module:"module 06",type:"words"},
+{english:"to brake (car)", spanish:"frenar",englishPhrase:"you need to learn to brake more smoothly", spanishPhrase:"necesitas aprender a frenar más suavemente",module:"module 06",type:"words"},
+{english:"restless", spanish:"inquieto(a)",englishPhrase:"I'm too restless to sleep", spanishPhrase:"estoy demasiado inquieto para dormir",module:"module 06",type:"words"},
+{english:"paradise", spanish:"paraíso (m)",englishPhrase:"where he lives is a paradise", spanishPhrase:"donde vive él es un paraíso",module:"module 06",type:"words"},
+{english:"hen", spanish:"gallina (f)",englishPhrase:"they have hens on the farm", spanishPhrase:"tienen gallinas en la granja",module:"module 06",type:"words"},
+{english:"reserved", spanish:"reservado(a)",englishPhrase:"that table is reserved for us", spanishPhrase:"esa mesa está reservada para nosostros",module:"module 06",type:"words"},
+{english:"sincere", spanish:"sincero(a)",englishPhrase:"she is very sincere and honest", spanishPhrase:"es muy sincera y honesta",module:"module 06",type:"words"},
+{english:"guitar", spanish:"guitarra (f)",englishPhrase:"I love to play guitar", spanishPhrase:"me encanta tocar la guitarra",module:"module 06",type:"words"},
+{english:"unexpected", spanish:"inesperado(a)",englishPhrase:"it was an unexpected surprise", spanishPhrase:"fue una sorpresa inesperada",module:"module 06",type:"words"},
+{english:"equality", spanish:"igualdad (f)",englishPhrase:"I believe in equality for women", spanishPhrase:"creo en la igualdad para las mujeres",module:"module 06",type:"words"},
+{english:"government", spanish:"gobierno (m)",englishPhrase:"it's the government's responsibility", spanishPhrase:"es la responsabilidad del gobierno",module:"module 06",type:"words"},
+{english:"tax", spanish:"impuesto (m)",englishPhrase:"the government has raised taxes again", spanishPhrase:"el gobierno ha subido los impuestos otra vez",module:"module 06",type:"words"},
+{english:"dozen", spanish:"docena (f)",englishPhrase:"a dozen eggs", spanishPhrase:"una docena de huevos",module:"module 06",type:"words"},
+{english:"pause", spanish:"pausa (f)",englishPhrase:"pause it please", spanishPhrase:"ponle pausa por favor",module:"module 06",type:"words"},
+{english:"recently", spanish:"recientemente",englishPhrase:"it happened very recently", spanishPhrase:"pasó muy recientemente",module:"module 06",type:"words"},
+{english:"answer, reply", spanish:"respuesta (f)",englishPhrase:"I don't understand the answer", spanishPhrase:"no entiendo la respuesta",module:"module 06",type:"words"},
+{english:"rest (of it)", spanish:"resto (m)",englishPhrase:"I don't know what happened to the rest", spanishPhrase:"no sé qué pasó con el resto",module:"module 06",type:"words"},
+{english:"society", spanish:"sociedad (f)",englishPhrase:"it's a sick society", spanishPhrase:"es una sociedad enferma",module:"module 06",type:"words"},
+{english:"question", spanish:"pregunta (f)",englishPhrase:"what a good questions!", spanishPhrase:"qué buena pregunta!",module:"module 06",type:"words"},
+{english:"to matter, to importa", spanish:"importar",englishPhrase:"it doesn't matter", spanishPhrase:"no importa",module:"module 06",type:"words"},
+{english:"to imagine", spanish:"imaginar",englishPhrase:"I can't imagine it", spanishPhrase:"no lo puedo imaginar",module:"module 06",type:"words"},
+{english:"brother", spanish:"hermano (m)",englishPhrase:"he's my brother", spanishPhrase:"es mi hermano",module:"module 06",type:"words"},
+{english:"about, around", spanish:"alrededor",englishPhrase:"I'll be there around 5 o'clock", spanishPhrase:"estaré allí alrededor de las cinco",module:"module 06",type:"words"},
+{english:"to signify, to mean", spanish:"significar",englishPhrase:"what does it mean?", spanishPhrase:"qué significa?",module:"module 06",type:"words"},
+{english:"deep", spanish:"profundo(a)",englishPhrase:"how deep is the pool?", spanishPhrase:"qué tan profunda es la alberca?",module:"module 06",type:"words"},
+{english:"opposite", spanish:"contrario (m)",englishPhrase:"she thinks the opposite of me", spanishPhrase:"piensa lo contrario a mí",module:"module 06",type:"words"},
+{english:"ground, floor", spanish:"suelo, piso (m)",englishPhrase:"he was on the floor", spanishPhrase:"estaba en el suelo",module:"module 06",type:"words"},
+{english:"wall", spanish:"pared (f)",englishPhrase:"the wall fell down!", spanishPhrase:"se cayó la pared!",module:"module 06",type:"words"},
+{english:"to build", spanish:"construir",englishPhrase:"they're going to build a wall here", spanishPhrase:"van a construir una pared aquí",module:"module 06",type:"words"},
+{english:"painting, paint", spanish:"pintura (f)",englishPhrase:"there are many paintings on the walls", spanishPhrase:"hay muchas pinturas en las paredes",module:"module 06",type:"words"},
+{english:"majority", spanish:"mayoría (f)",englishPhrase:"the majority agree with me", spanishPhrase:"la mayoría está de acuerdo conmigo",module:"module 06",type:"words"},
+{english:"appointment", spanish:"cita (f)",englishPhrase:"when is your appointment today?", spanishPhrase:"cúando es tu cita hoy?",module:"module 06",type:"words"},
+{english:"doctor", spanish:"médico(a), doctor(a)",englishPhrase:"I have an appointment with a doctor", spanishPhrase:"tengo una cita con una médica",module:"module 06",type:"words"},
+{english:"legend", spanish:"leyenda (f)",englishPhrase:"it's just a legend", spanishPhrase:"es sólo una leyenda",module:"module 06",type:"words"},
+{english:"pocket", spanish:"bolsillo (m)",englishPhrase:"it's in my pocket", spanishPhrase:"está en mi bolsillo",module:"module 06",type:"words"},
+{english:"valuable", spanish:"valioso(a)",englishPhrase:"this painting is very valuable", spanishPhrase:"esta pintura es muy valiosa",module:"module 06",type:"words"},
+{english:"square", spanish:"cuadrado (m)",englishPhrase:"it's shaped like a square", spanishPhrase:"tiene forma de cuadrado",module:"module 06",type:"words"},
+{english:"writer", spanish:"escritor(a)",englishPhrase:"I want to be a famous writer", spanishPhrase:"quiero ser un escritor famoso",module:"module 06",type:"words"},
+{english:"over it", spanish:"por encima de él(ella)",englishPhrase:"I can't see over it", spanishPhrase:"no puedo ver por encima de él",module:"module 06",type:"words"},
+{english:"to jump", spanish:"saltar",englishPhrase:"you have to jump over it", spanishPhrase:"tienes que saltar por encima de él",module:"module 06",type:"words"},
+{english:"invention", spanish:"invento (m)",englishPhrase:"it was a very important invention in history", spanishPhrase:"fue un invento muy importante en la historia",module:"module 06",type:"words"},
+{english:"european", spanish:"europeo(a)",englishPhrase:"it's a european invention", spanishPhrase:"es un invento europeo",module:"module 06",type:"words"},
+{english:"mountain", spanish:"montaña (f)",englishPhrase:"the tallest mountain in the world", spanishPhrase:"la montaña más alta del mundo",module:"module 06",type:"words"},
+{english:"mountain range", spanish:"sierra (f)",englishPhrase:"a beautiful mountain range", spanishPhrase:"una hermosa sierra",module:"module 06",type:"words"},
+{english:"summit, peak, top", spanish:"cima (f)",englishPhrase:"to top of the mountain", spanishPhrase:"la cima de la montaña",module:"module 06",type:"words"},
+{english:"desk", spanish:"escritorio (m)",englishPhrase:"a desk for the office", spanishPhrase:"un escritorio para la oficina",module:"module 06",type:"words"},
+{english:"lukewarm", spanish:"tibio(a)",englishPhrase:"the water should be lukewarm", spanishPhrase:"el agua debería ser tibia",module:"module 06",type:"words"},
 {english:"", spanish:"",englishPhrase:"this part of the story is very interesting", spanishPhrase:"esta parte de la historia es muy interesante",module:"module 01",type:"phrases"},
 {english:"", spanish:"",englishPhrase:"i can't handle rejection", spanishPhrase:"no puedo manejar el rechazo",module:"module 01",type:"phrases"},
 {english:"", spanish:"",englishPhrase:"the tank is full", spanishPhrase:"el tanque está lleno",module:"module 01",type:"phrases"},
@@ -605,6 +655,36 @@ SELECT {
 {english:"", spanish:"",englishPhrase:"the sound of the sea gives me pleasure", spanishPhrase:"el sonido del mar me da placer",module:"module 05",type:"phrases"},
 {english:"", spanish:"",englishPhrase:"the camera recorded the noise", spanishPhrase:"la cámara grabó el ruido",module:"module 05",type:"phrases"},
 {english:"", spanish:"",englishPhrase:"it's a new method that we want to try", spanishPhrase:"es un método nuevo que queremos intentar",module:"module 05",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"the government will charge more taxes", spanishPhrase:"el gobierno cobrará más impuestas",module:"module 06",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"today is the appointment with the doctor", spanishPhrase:"hoy es la cita con el médico",module:"module 06",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"he jumped over the chair", spanishPhrase:"saltó por encima de la silla",module:"module 06",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"the top of the mountain", spanishPhrase:"la cima de la montaña",module:"module 06",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"a monkey in a tree", spanishPhrase:"un mono en un árbol",module:"module 06",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"this window gives you a view of the mountain range", spanishPhrase:"esta ventana te da una vista de la sierra",module:"module 06",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"there are around one dozen hens", spanishPhrase:"hay alrededor de una docena de gallinas",module:"module 06",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"it's a square desk", spanishPhrase:"es un escritorio cuadrado",module:"module 06",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"her brother is very restless", spanishPhrase:"su hermano es muy inquieto",module:"module 06",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"are the brakes working?", spanishPhrase:"¿están funcionando los frenos?",module:"module 06",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"it's a european invention", spanishPhrase:"es un invento europeo",module:"module 06",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"an unexpected surprise", spanishPhrase:"una sorpresa inesperada",module:"module 06",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"I couldn't break in time", spanishPhrase:"no pude frenar a tiempo",module:"module 06",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"they're going to build the wall here", spanishPhrase:"aquí van a construir la pared",module:"module 06",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"where is the rest of the paint", spanishPhrase:"dónde está el resto de la pintura",module:"module 06",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"we're going to import guitars from Spain", spanishPhrase:"vamos a importar guitarras desde España",module:"module 06",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"the water is warm and deep", spanishPhrase:"el agua es tibia y profunda",module:"module 06",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"she's a writer and her personality is very reserved", spanishPhrase:"es escritora y su personalidad es muy reservada",module:"module 06",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"the majority of people want a change", spanishPhrase:"la mayoría de la gente quiere un cambio",module:"module 06",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"yes, I believe they are sincere people", spanishPhrase:"si, creo que es gente sincera",module:"module 06",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"what does the floor look like?", spanishPhrase:"¿cómo se ve el piso?",module:"module 06",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"there's nothing I can't imagine", spanishPhrase:"no hay nada que no pueda imaginar",module:"module 06",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"a square pocket", spanishPhrase:"un bolsillo cuadrado",module:"module 06",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"I think it means the opposite", spanishPhrase:"creo que significa lo contrario ",module:"module 06",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"the knot is loose", spanishPhrase:"el nudo está flojo",module:"module 06",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"every culture has it's legends", spanishPhrase:"cada cultura tiene sus leyendas",module:"module 06",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"everyone is naked in the painting", spanishPhrase:"todos están desnudos en el cuadro",module:"module 06",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"a valid answer to a good question", spanishPhrase:"una respuesta valiosa a una buena pregunta",module:"module 06",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"I spoke with him recently", spanishPhrase:"hablé con él recientemente",module:"module 06",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"equality is important in society", spanishPhrase:"la igualdad es importante en la sociedad",module:"module 06",type:"phrases"},
        ],
     }
     }
