--- a/SpanishVocabulary.html
+++ b/SpanishVocabulary.html
@@ -522,6 +522,56 @@ SELECT {
 {english:"summit, peak, top", spanish:"cima (f)",englishPhrase:"to top of the mountain", spanishPhrase:"la cima de la montaña",module:"module 06",type:"words"},
 {english:"desk", spanish:"escritorio (m)",englishPhrase:"a desk for the office", spanishPhrase:"un escritorio para la oficina",module:"module 06",type:"words"},
 {english:"lukewarm", spanish:"tibio(a)",englishPhrase:"the water should be lukewarm", spanishPhrase:"el agua debería ser tibia",module:"module 06",type:"words"},
+{english:"to get up", spanish:"levantarse",englishPhrase:"i got up early this morning", spanishPhrase:"me levante temprano esta manaña",module:"module 07",type:"words"},
+{english:"principal, main", spanish:"principal",englishPhrase:"the main entrance is over there", spanishPhrase:"la entrada principal está por alli",module:"module 07",type:"words"},
+{english:"recipe", spanish:"receta (f)",englishPhrase:"i would love to learn the recipe", spanishPhrase:"me encantaría aprender la receta",module:"module 07",type:"words"},
+{english:"flour", spanish:"harina (f)",englishPhrase:"the recipe says 100g of flour", spanishPhrase:"la receta dice cien gramos de harina",module:"module 07",type:"words"},
+{english:"endless", spanish:"interminable",englishPhrase:"her passion is endless", spanishPhrase:"su pasión es interminable",module:"module 07",type:"words"},
+{english:"incident", spanish:"incidente (m)",englishPhrase:"the incident happened yesterday", spanishPhrase:"el incidente pasó ayer",module:"module 07",type:"words"},
+{english:"regrettable", spanish:"lamentable",englishPhrase:"the incident was very regrettable", spanishPhrase:"el incidente fue muy lamentable",module:"module 07",type:"words"},
+{english:"head", spanish:"cabeza (f)",englishPhrase:"my head hurts", spanishPhrase:"me duele la cabeza",module:"module 07",type:"words"},
+{english:"courtesy title", spanish:"don, doña",englishPhrase:"may i speak with Vicky please?", spanishPhrase:"pudeo hablar con doña Vicky por favor?",module:"module 07",type:"words"},
+{english:"movement", spanish:"movimiento (m)",englishPhrase:"the movement is very soft", spanishPhrase:"el movimiento es muy suave",module:"module 07",type:"words"},
+{english:"vacant, free", spanish:"libre",englishPhrase:"lots of free time", spanishPhrase:"mucho tiempo libre",module:"module 07",type:"words"},
+{english:"to interest", spanish:"interesar",englishPhrase:"it doesn't interest me", spanishPhrase:"no me interesa",module:"module 07",type:"words"},
+{english:"complete", spanish:"completo(a)",englishPhrase:"the work isn't complete yet", spanishPhrase:"el trabajo no está completo todavía",module:"module 07",type:"words"},
+{english:"selfishness", spanish:"egoísmo (m)",englishPhrase:"i don't like selfishness", spanishPhrase:"no me gusta el egoísmo",module:"module 07",type:"words"},
+{english:"jacket", spanish:"chaqueta (f)",englishPhrase:"i left my jacket on the sofa", spanishPhrase:"dejé mi chaqueta en el sofá",module:"module 07",type:"words"},
+{english:"horn, antler", spanish:"cuerno (m)",englishPhrase:"look at the horns on that bull", spanishPhrase:"mira los cuernos de ese toro!",module:"module 07",type:"words"},
+{english:"melody", spanish:"melodia (f)",englishPhrase:"i love the melody of that song", spanishPhrase:"me encanta la melodía de esa canción",module:"module 07",type:"words"},
+{english:"shirt", spanish:"camisa (f)",englishPhrase:"this shirt is too big for him", spanishPhrase:"esta camisa es demasiado grande para él",module:"module 07",type:"words"},
+{english:"catalogue", spanish:"catálogo (m)",englishPhrase:"they have a huge catalogue of shirts", spanishPhrase:"tienen un catálogo enorme de camisas",module:"module 07",type:"words"},
+{english:"leader", spanish:"líder (m/f)",englishPhrase:"who's the leader of the group?", spanishPhrase:"quién es el líder del grupo?",module:"module 07",type:"words"},
+{english:"carrot", spanish:"zanahoria (f)",englishPhrase:"carrots are good for your health", spanishPhrase:"las zanahorias son buenas para tu salud",module:"module 07",type:"words"},
+{english:"cake", spanish:"pastel (m)",englishPhrase:"i asked for a carrot cake", spanishPhrase:"pedí un pastel de zanahoria",module:"module 07",type:"words"},
+{english:"candle, sail", spanish:"vela (f)",englishPhrase:"there are 10 candles on the cake", spanishPhrase:"hay diez velas en el pastel",module:"module 07",type:"words"},
+{english:"to blow, to blow out", spanish:"soplar",englishPhrase:"the girl blew out the candles", spanishPhrase:"a niña sopló las velas",module:"module 07",type:"words"},
+{english:"cheese", spanish:"queso (m)",englishPhrase:"cheese and wine is a good combination", spanishPhrase:"queso y vine es una buena combinación",module:"module 07",type:"words"},
+{english:"clothes", spanish:"ropa (f)",englishPhrase:"where are your clothes?", spanishPhrase:"dónde está tu ropa?",module:"module 07",type:"words"},
+{english:"wardrobe, closet", spanish:"closet (m)",englishPhrase:"there's room in the closet for your clothes", spanishPhrase:"hay espacio en el closet para tu ropa",module:"module 07",type:"words"},
+{english:"hanging", spanish:"colgado(a)",englishPhrase:"your clothes are hanging in the wardrobe", spanishPhrase:"tu ropa está colgada en el closet",module:"module 07",type:"words"},
+{english:"tablecloth", spanish:"mantel (m)",englishPhrase:"i bought a new tablecloth", spanishPhrase:"compré un nuevo mantel",module:"module 07",type:"words"},
+{english:"nun", spanish:"monja (f)",englishPhrase:"nuns teach in that school", spanishPhrase:"las monjas enseñan en esa escuela",module:"module 07",type:"words"},
+{english:"lesson", spanish:"lección (f)",englishPhrase:"a valuable lesson", spanishPhrase:"una lección valiosa",module:"module 07",type:"words"},
+{english:"dirty", spanish:"sucio(a)",englishPhrase:"the house is dirty", spanishPhrase:"la casa está sucio",module:"module 07",type:"words"},
+{english:"proud", spanish:"orgulloso(a)",englishPhrase:"she's a proud woman", spanishPhrase:"es una mujer orgullosa",module:"module 07",type:"words"},
+{english:"flag", spanish:"bandera (f)",englishPhrase:"i'm very proud of my flag", spanishPhrase:"estoy muy orgulloso de mi bandera",module:"module 07",type:"words"},
+{english:"reasonable", spanish:"razonable",englishPhrase:"it's not reasonable to think that way", spanishPhrase:"no es razonable pensar asi",module:"module 07",type:"words"},
+{english:"to lie", spanish:"mentir",englishPhrase:"i don't want to lie to you", spanishPhrase:"no quiero mentirte",module:"module 07",type:"words"},
+{english:"lie", spanish:"mentira (f)",englishPhrase:"he told a lie", spanishPhrase:"dijo una mentira",module:"module 07",type:"words"},
+{english:"permission, permit", spanish:"permiso (m)",englishPhrase:"do you have permission to be here?", spanishPhrase:"tienes permiso para estar aquí?",module:"module 07",type:"words"},
+{english:"horse", spanish:"caballo (m)",englishPhrase:"a painting of a horse", spanishPhrase:"una pintura de un caballo",module:"module 07",type:"words"},
+{english:"magnificent", spanish:"magnifico(a)",englishPhrase:"a magnificent horse", spanishPhrase:"un caballo magnifico",module:"module 07",type:"words"},
+{english:"popular", spanish:"popular",englishPhrase:"she wants to be popular in school", spanishPhrase:"quiere ser popular en la escualo",module:"module 07",type:"words"},
+{english:"magazine", spanish:"revista (f)",englishPhrase:"a popular magazine", spanishPhrase:"una revista popular",module:"module 07",type:"words"},
+{english:"kind", spanish:"amable",englishPhrase:"thank you, you are very kind", spanishPhrase:"gracias, eres muy amable",module:"module 07",type:"words"},
+{english:"thought", spanish:"pensamiento (m)",englishPhrase:"a very kind thought", spanishPhrase:"un pensamiento muy amable",module:"module 07",type:"words"},
+{english:"private", spanish:"privado(a)",englishPhrase:"my private thoughts", spanishPhrase:"mis pensamientos privados",module:"module 07",type:"words"},
+{english:"success", spanish:"éxito (m)",englishPhrase:"we've had great success", spanishPhrase:"teniamos mucho éxito",module:"module 07",type:"words"},
+{english:"habit", spanish:"costumbre (f)",englishPhrase:"it's a bad habit", spanishPhrase:"es una mala costumbre",module:"module 07",type:"words"},
+{english:"luck", spanish:"suerte (f)",englishPhrase:"lots of luck", spanishPhrase:"mucha suerte",module:"module 07",type:"words"},
+{english:"interesting", spanish:"interesante",englishPhrase:"a very interesting story", spanishPhrase:"una historia muy interesante",module:"module 07",type:"words"},
+{english:"science", spanish:"ciencia (f)",englishPhrase:"i teach science", spanishPhrase:"enseño ciencia",module:"module 07",type:"words"},
 {english:"", spanish:"",englishPhrase:"this part of the story is very interesting", spanishPhrase:"esta parte de la historia es muy interesante",module:"module 01",type:"phrases"},
 {english:"", spanish:"",englishPhrase:"i can't handle rejection", spanishPhrase:"no puedo manejar el rechazo",module:"module 01",type:"phrases"},
 {english:"", spanish:"",englishPhrase:"the tank is full", spanishPhrase:"el tanque está lleno",module:"module 01",type:"phrases"},
@@ -685,6 +735,32 @@ SELECT {
 {english:"", spanish:"",englishPhrase:"a valid answer to a good question", spanishPhrase:"una respuesta valiosa a una buena pregunta",module:"module 06",type:"phrases"},
 {english:"", spanish:"",englishPhrase:"I spoke with him recently", spanishPhrase:"hablé con él recientemente",module:"module 06",type:"phrases"},
 {english:"", spanish:"",englishPhrase:"equality is important in society", spanishPhrase:"la igualdad es importante en la sociedad",module:"module 06",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"maria gave us the complete recipe for the carrot cake", spanishPhrase:"doña Maria nos dió la receta completa del pastel de zanahoria",module:"module 07",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"the clothes hanging in the closet are dirty", spanishPhrase:"la ropa colgada en el closet esta sucia",module:"module 07",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"i like the jacket and the shirt from the magazine", spanishPhrase:"me gusta la chaqueta y la camisa de la revista",module:"module 07",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"we need to buy flour and cheese", spanishPhrase:"necesitamos comprar harina y queso",module:"module 07",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"i blew out the candle", spanishPhrase:"soplé la vela",module:"module 07",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"that tablecloth is dirty", spanishPhrase:"ese mantel está sucio",module:"module 07",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"he has the habit of getting up very early", spanishPhrase:"tiene la costumbre de levantarse muy temprano",module:"module 07",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"it was a regrettable incident", spanishPhrase:"fue un incidente lamentable",module:"module 07",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"she's the leader of the group and she's very friendly", spanishPhrase:"ella es la líder del grupo y es muy amable",module:"module 07",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"it's a private event", spanishPhrase:"es un evento privado",module:"module 07",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"a catalog of mistakes", spanishPhrase:"un catálogo de errores",module:"module 07",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"science is very interesting", spanishPhrase:"la ciencia es muy interesante",module:"module 07",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"we are proud of our flag", spanishPhrase:"estamos orgullosos de nuestra bandera",module:"module 07",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"she bought a magnificent horse for her daughter", spanishPhrase:"compró un magnífico caballo para su hija",module:"module 07",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"the price he wants isn't reasonable", spanishPhrase:"el precio que quiere no es razonable",module:"module 07",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"i would never want to be a nun", spanishPhrase:"nunca querría ser una monja",module:"module 07",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"it's not a popular opinion", spanishPhrase:"no es una opinión popular",module:"module 07",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"i don't want to lie to you", spanishPhrase:"no quiero mentirte",module:"module 07",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"the lesson today is at 5", spanishPhrase:"la lección de hoy es a las cinco",module:"module 07",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"i love the melody, the music from the film was a success", spanishPhrase:"me encanta la melodía, la música de la película fue un éxito",module:"module 07",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"the main room of the house", spanishPhrase:"el cuarto principal de la casa",module:"module 07",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"it's an endless list of lies", spanishPhrase:"es una lista interminable de mentiras",module:"module 07",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"a head full of thoughts", spanishPhrase:"una cabeza llena de pensamientos",module:"module 07",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"i was lucky, they gave me the permissions i wanted", spanishPhrase:"tuve suerte, me dieron el permiso que quería",module:"module 07",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"that doesn't interest me", spanishPhrase:"eso no me interesa",module:"module 07",type:"phrases"},
+
        ],
     }
     }
